# Exegesis

./: Cargo.toml  rustfmt.toml
examples/: simple.rs
src/: date.rs  extractor.rs  formatter.rs  lib.rs  matcher.rs  mock.rs  part.rs  rule.rs  rules.rs  toml.rs  website.rs
src/formatter/: html.rs  json.rs  mod.rs
tests/: rust-at-one-year.expected.html  rust-at-one-year.html
