[package]
name = "exegesis"
version = "0.1.0"
description = "Extract and format the content of Web pages"

authors = ["Benoît Zugmeyer <bzugmeyer@gmail.com>"]

homepage = "https://github.com/BenoitZugmeyer/Exegesis"
repository = "https://github.com/BenoitZugmeyer/Exegesis"

[dependencies]
chrono = "0.2.22"
html5ever = "0.5.4"
hyper = "0.9.5"
mime = "0.2.0"
regex = "0.1.68"
toml = "0.1.28"
kuchiki = "0.3.2"

[dev-dependencies]
yup-hyper-mock = "1.3.2"
