[package]
authors = ["Benoît Zugmeyer <bzugmeyer@gmail.com>"]
description = "Extract and format the content of Web pages"
homepage = "https://github.com/BenoitZugmeyer/Exegesis"
name = "exegesis"
repository = "https://github.com/BenoitZugmeyer/Exegesis"
version = "0.1.0"

[dependencies]
clap = "2.5.2"
html5ever = "0.5.4"
hyper = "0.9.5"
kuchiki = "0.3.2"
mime = "0.2.0"
regex = "0.1.68"
serde = "=0.7.5"
serde_json = "=0.7.1"
serde_macros = "=0.7.5"

[dependencies.chrono]
features = ["serde"]
version = "0.2.22"

[dependencies.toml]
default-features = false
features = ["serde"]
version = "0.1.28"

[dev-dependencies]
yup-hyper-mock = "1.3.2"
